fixed table being jumpy in mylistings

--- a/server/public/sass/main_index.scss
+++ b/server/public/sass/main_index.scss
@@ -4,7 +4,6 @@
 
 .right-caret {
   color: #FF8751;
-  @include transition(all 0.25s);
 }
 
 .right-caret.active {
