--- a/server/public/sass/profile.scss
+++ b/server/public/sass/profile.scss
@@ -8,3 +8,19 @@
   width: 100px;
   flex-grow: 0;
 }
+
+.td-status {
+  width: 116px;
+}
+
+.td-arrow {
+  width: 10px;
+}
+
+.td-date {
+  width: 160px;
+}
+
+.td-view {
+  width: 10px;
+}
